# postgres_mailing_list-analysis

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb
src/: analysis.py  processing.py  utils.py  visualization.py
