[tool.poetry]
name = "postgres-mailing-list-analysis"
version = "0.1.0"
description = "Analysis of popular postgres mailing lists"
authors = ["srikanthChittampally <srikanth@hexacluster.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mailbox = "^0.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
